# noted.md

./: CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: ai_provider.rs  cli.rs  config.rs  error.rs  file_utils.rs  gemini_client.rs  main.rs  ollama_client.rs  pdf_utils.rs  ui.rs
src/clients/: claude_client.rs  gemini_client.rs  mod.rs  notion_client.rs  ollama_client.rs  openai_client.rs
src/notion/: converter.rs
